src/assets/styles/_common.scss
/*!
 * Licensed under the MIT License (https://opensource.org/licenses/MIT). Find the full license text in the LICENSE file of the project root.
 */
@use '~@angular/material' as mat;
@import 'src/app/custom-theme/variables';

.d-block {
  display: block;
}

.themed {
  color: mat.get-color-from-palette($theme-primary);
}

.primary-background {
  color: mat.get-color-from-palette($theme-primary, default-contrast);
  background: mat.get-color-from-palette($theme-primary);
}

.primary-light-background {
  color: mat.get-color-from-palette($theme-primary, lighter-contrast);
  background: mat.get-color-from-palette($theme-primary, lighter);
}

.warn-background {
  color: mat.get-color-from-palette($theme-warn, default-contrast);
  background: mat.get-color-from-palette($theme-warn);
}

.warn-light-background {
  color: mat.get-color-from-palette($theme-warn, lighter-contrast);
  background: mat.get-color-from-palette($theme-warn, lighter);
}

.grab-cursor {
  cursor: grab;
}

.pointer-cursor {
  cursor: pointer;
}

.disabled {
  opacity: 0.5;
}

.ov-hidden {
  overflow: hidden;
}

.ov-auto {
  overflow: auto;
}

